frontend/test/should_fail/index_pattern_multiple_fromto_two_lower_bounds2.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ni >= 42, Ni <= 44, N1j >= 0, N1j >= 1)};
	
	modify {
	}
}
